added GET DELETE POST employee requests. Also included favorite jokes for each POST request
